--- a/client/src/App.css
+++ b/client/src/App.css
@@ -134,6 +134,7 @@ body {
 }
 
 .emotionTable {
+  font-family: 'Poppins', sans-serif;
   width: 800px;
 }
 
@@ -175,6 +176,16 @@ body {
   border: 5px solid;
   border-radius: 25px;
   border-color: #00ff00; 
+}
+
+#disgustTable {
+  font-size: 20px;
+  margin: 10px;
+  padding: 20px;
+  color: #d1d1e0;
+  border: 5px solid;
+  border-radius: 25px;
+  border-color: #d1d1e0; 
 }
 
 #emotionContainer {
